--- a/app/views/deals/_body_most_reviewed.html.erb
+++ b/app/views/deals/_body_most_reviewed.html.erb
@@ -1,20 +1,20 @@
 
 <!-- Main Categories One -->
-<div class="filter-node most_box most_main" data-filter='["Categoryes","Electronics"]'>
+<div class="filter-node most_box most_main" data-filter='["Categories","Electronics"]'>
   <a target="_blank" href="https://amzn.to/2Ho1BMA" class="overlay-container" data-overlay-text="Electronics"><img src="https://images.unsplash.com/photo-1468495244123-6c6c332eeece?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Electronics" class="overlay-img" /><p>Electronics</p></a> 
 </div>
 
-<div class="filter-node most_box most_main" data-filter='["Categoryes","Cell Phones & Accessories "]'>
+<div class="filter-node most_box most_main" data-filter='["Categories","Cell Phones & Accessories "]'>
   <a target="_blank" href="https://amzn.to/3249sXr" class="overlay-container" data-overlay-text="Cell Phones & Accessories  "><img src="https://images.unsplash.com/photo-1512499617640-c74ae3a79d37?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Cell Phones & Accessories " class="overlay-img" /><p>Cell Phones & Accessories </p></a> 
 </div>
 
-<div class="filter-node most_box most_main" data-filter='["Categoryes","Computers & Accessories"]'>
+<div class="filter-node most_box most_main" data-filter='["Categories","Computers & Accessories"]'>
   <a target="_blank" href="https://amzn.to/2KY6JJy" class="overlay-container" data-overlay-text="Computers & Accessories"><img src="https://images.unsplash.com/photo-1542393545-10f5cde2c810?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Computers & Accessories" class="overlay-img" /><p>Computers & Accessories</p></a> 
 </div>
 <!-- End -->
 
 
-<!-- <div class="filter-node most_box" data-filter='["Categoryes","Title"]'>
+<!-- <div class="filter-node most_box" data-filter='["Categories","Title"]'>
 <a target="_blank" href="products_Link" class="overlay-container" data-overlay-text="Title"><img src="Image_URL" alt="Title" class="overlay-img" /><p>Title</p></a> 
 </div> -->
 
@@ -60,15 +60,15 @@
 
 
 <!-- Main Categories Two -->
-<div class="filter-node most_box most_main" data-filter='["Categoryes","Appliances"]'>
+<div class="filter-node most_box most_main" data-filter='["Categories","Appliances"]'>
   <a target="_blank" href="https://amzn.to/3223G8Q" class="overlay-container" data-overlay-text="Appliances"><img src="https://images.unsplash.com/photo-1521732292260-b73d63a37f5b?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Appliances" class="overlay-img" /><p>Appliances</p></a> 
 </div>
 
- <div class="filter-node most_box most_main" data-filter='["Categoryes","Home & Kitchen"]'>
+ <div class="filter-node most_box most_main" data-filter='["Categories","Home & Kitchen"]'>
   <a target="_blank" href="https://amzn.to/2HG1c8D" class="overlay-container" data-overlay-text="Home & Kitchen"><img src="https://images.unsplash.com/photo-1556909172-54557c7e4fb7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Home & Kitchen" class="overlay-img" /><p>Home & Kitchen</p></a> 
 </div>
 
-<div class="filter-node most_box most_main" data-filter='["Categoryes","Tools & Home Improvement"]'>
+<div class="filter-node most_box most_main" data-filter='["Categories","Tools & Home Improvement"]'>
   <a target="_blank" href="https://amzn.to/32fazE7" class="overlay-container" data-overlay-text="Tools & Home Improvement"><img src="https://images.unsplash.com/photo-1562259929-b4e1fd3aef09?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Tools & Home Improvement" class="overlay-img" /><p>Tools & Home Improvement</p></a> 
 </div>
 <!-- End -->
@@ -109,20 +109,20 @@
   <a target="_blank" href="https://amzn.to/31WtV0i" class="overlay-container" data-overlay-text="Security Camera"><img src="https://images.unsplash.com/photo-1496368077930-c1e31b4e5b44?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Security Camera" class="overlay-img" /><p>Security Camera</p></a>
 </div>
 
-<div class="filter-node most_box" data-filter='["Categoryes","Measuring Tools"]'>
+<div class="filter-node most_box" data-filter='["Categories","Measuring Tools"]'>
 <a target="_blank" href="https://amzn.to/2HFZ7tl" class="overlay-container" data-overlay-text="Measuring Tools"><img src="https://images.unsplash.com/photo-1563770660834-82b48f27ec9d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Measuring Tools" class="overlay-img" /><p>Measuring Tools</p></a> 
 </div>
 
 <!-- Main Categories Three -->
-<div class="filter-node most_box most_main" data-filter='["Categoryes","Sports & Outdoors"]'>
+<div class="filter-node most_box most_main" data-filter='["Categories","Sports & Outdoors"]'>
   <a target="_blank" href="https://amzn.to/341LfDd" class="overlay-container" data-overlay-text="Sports & Outdoors"><img src="https://images.unsplash.com/photo-1496055828681-8d699424c1c7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Sports & Outdoors" class="overlay-img" /><p>Sports & Outdoors</p></a> 
 </div>
 
- <div class="filter-node most_box most_main" data-filter='["Categoryes","Patio, Lawn & Garden"]'>
+ <div class="filter-node most_box most_main" data-filter='["Categories","Patio, Lawn & Garden"]'>
   <a target="_blank" href="https://amzn.to/3211vCk" class="overlay-container" data-overlay-text="Patio, Lawn & Garden"><img src="https://images.unsplash.com/photo-1552458453-bd0dfedd9a32?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Patio, Lawn & Garden" class="overlay-img" /><p>Patio, Lawn & Garden</p></a> 
 </div>
 
- <div class="filter-node most_box most_main" data-filter='["Categoryes","Automotive"]'>
+ <div class="filter-node most_box most_main" data-filter='["Categories","Automotive"]'>
   <a target="_blank" href="https://amzn.to/2Hs5m3F" class="overlay-container" data-overlay-text="Automotive"><img src="https://images.unsplash.com/photo-1539799139339-50c5fe1e2b1b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Automotive" class="overlay-img" /><p>Automotive</p></a> 
 </div>
 <!-- End -->
@@ -139,24 +139,24 @@
   <a target="_blank" href="https://amzn.to/2Hkw0vs" class="overlay-container" data-overlay-text="Travel Mugs"><img src="https://images.unsplash.com/photo-1467949576168-6ce8e2df4e13?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Travel Mugs" class="overlay-img" /><p>Travel Mugs</p></a>
 </div>
 
-<div class="filter-node most_box" data-filter='["Categoryes","Luggage"]'>
+<div class="filter-node most_box" data-filter='["outdoor","Luggage"]'>
 <a target="_blank" href="https://amzn.to/2Zu4Qse" class="overlay-container" data-overlay-text="Luggage"><img src="https://images.unsplash.com/photo-1509694276680-cfc1a363bc5d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Luggage" class="overlay-img" /><p>Luggage</p></a> 
 </div>
 
-<div class="filter-node most_box" data-filter='["Categoryes","Travel Pillows"]'>
+<div class="filter-node most_box" data-filter='["outdoor","Travel Pillows"]'>
 <a target="_blank" href="https://amzn.to/32azjNo" class="overlay-container" data-overlay-text="Travel Pillows"><img src="https://images-na.ssl-images-amazon.com/images/I/61vtd5E4cvL._SX679_.jpg" alt="Travel Pillows" class="overlay-img" /><p>Travel Pillows</p></a> 
 </div>
 
 <!-- Main Categories Four -->
-<div class="filter-node most_box most_main" data-filter='["Categoryes","Office Products"]'>
+<div class="filter-node most_box most_main" data-filter='["Categories","Office Products"]'>
   <a target="_blank" href="https://amzn.to/2Htu5Vf" class="overlay-container" data-overlay-text="Office Products"><img src="https://images.unsplash.com/photo-1456735190827-d1262f71b8a3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Office Products" class="overlay-img" /><p>Office Products</p></a> 
 </div>
 
-<div class="filter-node most_box most_main" data-filter='["Categoryes","Kindle"]'>
+<div class="filter-node most_box most_main" data-filter='["Categories","Kindle"]'>
   <a target="_blank" href="https://amzn.to/327utjY" class="overlay-container" data-overlay-text="Kindle"><img src="https://images.unsplash.com/photo-1455541504462-57ebb2a9cec1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Kindle" class="overlay-img" /><p>Kindle</p></a> 
 </div>
 
- <div class="filter-node most_box most_main" data-filter='["Categoryes","Book"]'>
+ <div class="filter-node most_box most_main" data-filter='["Categories","Book"]'>
   <a target="_blank" href="https://amzn.to/2NzhkMG" class="overlay-container" data-overlay-text="Book"><img src="https://images.unsplash.com/photo-1481627834876-b7833e8f5570?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Book" class="overlay-img" /><p>Book</p></a> 
 </div>
 <!-- End -->
@@ -173,41 +173,85 @@
 <a target="_blank" href="https://amzn.to/324iCU3" class="overlay-container" data-overlay-text="Printers"><img src="https://images.unsplash.com/photo-1561990975-6cfff5661206?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Printers" class="overlay-img" /><p>Printers</p></a> 
 </div>
 
-<div class="filter-node most_box" data-filter='["Categoryes","Title"]'>
+<div class="filter-node most_box" data-filter='["Categories","Title"]'>
 <a target="_blank" href="products_Link" class="overlay-container" data-overlay-text="Title"><img src="https://images.unsplash.com/photo-1555631545-9dc21031669b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Title" class="overlay-img" /><p>Title</p></a> 
 </div>
 
-<div class="filter-node most_box" data-filter='["Categoryes","Title"]'>
+<div class="filter-node most_box" data-filter='["Categories","Title"]'>
 <a target="_blank" href="products_Link" class="overlay-container" data-overlay-text="Title"><img src="https://images.unsplash.com/photo-1555631545-9dc21031669b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Title" class="overlay-img" /><p>Title</p></a> 
 </div>
 
 <!-- Main Categories Five -->
-<div class="filter-node most_box most_main" data-filter='["Categoryes","Beauty"]'>
+<div class="filter-node most_box most_main" data-filter='["Categories","Beauty"]'>
   <a target="_blank" href="https://amzn.to/2HuhmBQ" class="overlay-container" data-overlay-text="Beauty"><img src="https://images.unsplash.com/photo-1562887284-eb863165ebc8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Beauty" class="overlay-img" /><p>Beauty</p></a> 
 </div>
 
-<div class="filter-node most_box most_main" data-filter='["Categoryes","Clothing, Shoes & Jewelry"]'>
+<div class="filter-node most_box most_main" data-filter='["Categories","Clothing, Shoes & Jewelry"]'>
   <a target="_blank" href="https://amzn.to/33WGlqW" class="overlay-container" data-overlay-text="Clothing, Shoes & Jewelry"><img src="https://images.unsplash.com/photo-1441035844538-e2ce7dba066b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Clothing, Shoes & Jewelry" class="overlay-img" /><p>Clothing, Shoes & Jewelry</p></a> 
 </div>
 
- <div class="filter-node most_box most_main" data-filter='["Categoryes","Health & Household"]'>
+ <div class="filter-node most_box most_main" data-filter='["Categories","Health & Household"]'>
   <a target="_blank" href="https://amzn.to/2Zvg13I" class="overlay-container" data-overlay-text="Health & Household"><img src="https://images.unsplash.com/photo-1506126613408-eca07ce68773?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Health & Household" class="overlay-img" /><p>Health & Household</p></a> 
 </div>
 <!-- End -->
 
+<div class="filter-node most_box" data-filter='["beauty","Make up"]'>
+<a target="_blank" href="https://amzn.to/2ZBRuKo" class="overlay-container" data-overlay-text="Make up"><img src="https://images.unsplash.com/photo-1516975080664-ed2fc6a32937?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Make up" class="overlay-img" /><p>Make up</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["beauty","Skin Care"]'>
+<a target="_blank" href="https://amzn.to/2ZJ4qy0" class="overlay-container" data-overlay-text="Skin Care"><img src="https://images.unsplash.com/photo-1562887085-22edc4817a9e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Skin Care" class="overlay-img" /><p>Skin Care</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["beauty","Hair Care"]'>
+<a target="_blank" href="https://amzn.to/2ZCVc6t" class="overlay-container" data-overlay-text="Hair Care"><img src="https://images.unsplash.com/photo-1522337360788-8b13dee7a37e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Hair Care" class="overlay-img" /><p>Hair Care</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["beauty","Fragrance"]'>
+<a target="_blank" href="https://amzn.to/2NJbNDe" class="overlay-container" data-overlay-text="Fragrance"><img src="https://images.unsplash.com/photo-1474692321929-4d0c27302b7e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Fragrance" class="overlay-img" /><p>Fragrance</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["beauty","Foot, Hand & Nail Care"]'>
+<a target="_blank" href="https://amzn.to/2NHIuB7" class="overlay-container" data-overlay-text="Foot, Hand & Nail Care"><img src="https://images.unsplash.com/photo-1534131270927-b0704a572b6f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Foot, Hand & Nail Care" class="overlay-img" /><p>Foot, Hand & Nail Care</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["beauty","Health Care"]'>
+<a target="_blank" href="https://amzn.to/2UmzNxs" class="overlay-container" data-overlay-text="Health Care"><img src="https://images.unsplash.com/photo-1507761862811-98432ab53cde?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Health Care" class="overlay-img" /><p>Health Care</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["beauty","Personal Care"]'>
+<a target="_blank" href="https://amzn.to/2LfIvcI" class="overlay-container" data-overlay-text="Personal Care"><img src="https://images.unsplash.com/photo-1483721310020-03333e577078?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Personal Care" class="overlay-img" /><p>Personal Care</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["beauty","Oral Care"]'>
+<a target="_blank" href="https://amzn.to/2ZEKMDv" class="overlay-container" data-overlay-text="Oral Care"><img src="https://images.unsplash.com/photo-1553691158-91a7f9183156?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Oral Care" class="overlay-img" /><p>Oral Care</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["beauty","Household Supplies"]'>
+<a target="_blank" href="https://amzn.to/2ZCWoqt" class="overlay-container" data-overlay-text="Household Supplies"><img src="https://images.unsplash.com/photo-1487338824319-64ff9302d403?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Household Supplies" class="overlay-img" /><p>Household Supplies</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["beauty","Supplements"]'>
+<a target="_blank" href="https://amzn.to/2zHna6t" class="overlay-container" data-overlay-text="Supplements"><img src="https://images.unsplash.com/photo-1558713057-d4b70b091888?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Supplements" class="overlay-img" /><p>Supplements</p></a> 
+</div>
+
 <!-- Main Categories Six -->
-<div class="filter-node most_box most_main" data-filter='["Categoryes","Baby"]'>
+<div class="filter-node most_box most_main" data-filter='["Categories","Baby"]'>
   <a target="_blank" href="https://amzn.to/2HrW6N0" class="overlay-container" data-overlay-text="Baby"><img src="https://images.unsplash.com/photo-1508009219918-7d528f269841?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Baby" class="overlay-img" /><p>Baby</p></a> 
 </div>
 
-<div class="filter-node most_box most_main" data-filter='["Categoryes","Toys & Games"]'>
+<div class="filter-node most_box most_main" data-filter='["Categories","Toys & Games"]'>
   <a target="_blank" href="https://amzn.to/3211XAw" class="overlay-container" data-overlay-text="Toys & Games"><img src="https://images.unsplash.com/photo-1558877385-81a1c7e67d72?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Toys & Games" class="overlay-img" /><p>Toys & Games</p></a> 
 </div>
 
-<div class="filter-node most_box most_main" data-filter='["Categoryes","Pet Supplies"]'>
+<div class="filter-node most_box most_main" data-filter='["Categories","Pet Supplies"]'>
   <a target="_blank" href="https://amzn.to/2NzEjYa" class="overlay-container" data-overlay-text="Pet Supplies"><img src="https://images.unsplash.com/photo-1450778869180-41d0601e046e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Pet Supplies" class="overlay-img" /><p>Pet Supplies</p></a> 
 </div>
 <!-- End -->
+
+<div class="filter-node most_box" data-filter='["others","Baby & Child"]'>
+<a target="_blank" href="https://amzn.to/2ZInhJM" class="overlay-container" data-overlay-text="Baby & Child"><img src="https://images.unsplash.com/photo-1511948374796-056e8f289f34?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Baby & Child" class="overlay-img" /><p>Baby & Child</p></a> 
+</div>
 
 <div class="filter-node most_box" data-filter='["tech","Gaming Keyboards"]'>
   <a target="_blank" href="https://amzn.to/2HAuBB5" class="overlay-container" data-overlay-text="Gaming Keyboards"><img src="https://images.unsplash.com/photo-1558742569-fe6d39d05837?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Gaming Keyboards" class="overlay-img" /><p>Gaming Keyboards</p></a>
