--- a/app/views/recommends/show.html.erb
+++ b/app/views/recommends/show.html.erb
@@ -17,7 +17,7 @@
       
       <div class="detitle">
         <h2><span><%= @recommend.re_title %></span></h2>
-        <span class="post_date"><%= @recommend.sub_number_01 %><em>by Oh,i gotta buy this</em></span>
+        <!-- <span class="post_date"><%= @recommend.sub_number_01 %><em>by Oh,i gotta buy this</em></span> -->
         <p><%= @recommend.sub_intro %></p>
         <% if can? :update, @recommend %>
           <div class="btn clearfix admin">
