--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -49,6 +49,111 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="45" data-price="17.04">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZKmnMK"><img src="https://m.media-amazon.com/images/I/81JWQQYy09L._SR400,400_.jpg" alt="Neithera Seersucker Duvet Cover Set King" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>45% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZKmnMK">Neithera Seersucker Duvet Cover Set King, 3-Piece Nature Style Water-Washed Microfiber Bedding Set with Zipper and Corner Ties</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$17.04</span><span class="ori_price">$30.99</span></address>
+      <textarea readonly="readonly" class="code_area">45BGA15H</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>45% off at $30.99</strong> with promo code: <strong class="m_codes">45BGA15H</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 01, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2ZKmnMK">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="30" data-price="14.69">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZFBwD2"><img src="https://m.media-amazon.com/images/I/51rkAQgj6CL._SR400,400_.jpg" alt="dOvOb Mini Cooper Building Blocks" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZFBwD2">dOvOb Mini Cooper Building Blocks Toy Boys Classic Model Sports Cars Kit Expert Creator Set(492 PCS)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.69</span><span class="ori_price">$20.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">30FCJ5J8</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $20.99</strong> with promo code: <strong class="m_codes">30FCJ5J8</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 02, 2019 at 08:00 AM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2ZFBwD2">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="50" data-price="11.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2NIIgcV"><img src="https://m.media-amazon.com/images/I/61HLEOBYWHL._SR400,400_.jpg" alt="WESEN Dog Bowls" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2NIIgcV">WESEN Dog Bowls, Stainless Steel Dog Bowl with No Spill Non-Skid Silicone Mat, 80 oz Double Feeder Food Water Bowl for Dogs,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.49</span><span class="ori_price">$22.99</span></address>
+      <textarea readonly="readonly" class="code_area">5042IW64</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $22.99</strong> with promo code: <strong class="m_codes">5042IW64</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 01, 2019 at 12:00 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2NIIgcV">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="50" data-price="9.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MNqt4E"><img src="https://m.media-amazon.com/images/I/61JfAPiBXwL._SR400,400_.jpg" alt="Kitchen Dish Rack" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MNqt4E">Kitchen Dish Rack, Aluminum Drying Plate Rack, Rustproof Dish Drainers with Drainboard & Utensil Holder</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.99</span><span class="ori_price">$19.99</span></address>
+      <textarea readonly="readonly" class="code_area">50Y465NL</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $19.99</strong> with promo code: <strong class="m_codes">50Y465NL</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 01, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2MNqt4E">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="50" data-price="8.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2UooPax"><img src="https://m.media-amazon.com/images/I/71pbBACQ3wL._SR400,400_.jpg" alt="Peradix Stealing Coin Santa Claus Box" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2UooPax">Peradix Stealing Coin Santa Claus Box Piggy Bank English Speaking Christmas Song for All Kids</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.00</span><span class="ori_price">$15.99</span></address>
+      <textarea readonly="readonly" class="code_area">50UN2T5K</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $15.99</strong> with promo code: <strong class="m_codes">50UN2T5K</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 02, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2UooPax">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="75" data-price="16.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZJBtCi"><img src="https://m.media-amazon.com/images/I/61EICQDuz-L._SR400,400_.jpg" alt="YinQin 1600W Negative Ionic Folding Hair Dryer" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>75% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZJBtCi">YinQin 1600W Negative Ionic Folding Hair Dryer Light Weight Travel Hair Dryer 2 Speeds and Cool Shot Button Tourmaline ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$16.99</span><span class="ori_price">$67.96</span></address>
+      <textarea readonly="readonly" class="code_area">75I4TE54</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>75% off at $67.96</strong> with promo code: <strong class="m_codes">75I4TE54</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 01, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2ZJBtCi">Use Code at Amazon</a></div>
+</div>
+  
 <div class="card clearfix" data-score="50" data-price="20.00">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/34iKOUU"><img src="https://m.media-amazon.com/images/I/61aRyZKai8L._SR400,400_.jpg" alt="Wireless Earbuds" /></a>
