--- a/app/views/gadgets/show.html.erb
+++ b/app/views/gadgets/show.html.erb
@@ -20,8 +20,14 @@
            <span><p><%= @gadget.gg_intro %></p></span>
          <% end %>
          <p class="keyword"><%= @gadget.gg_option_04 %></p>
-         <p>$<%= @gadget.gg_aprice %></p>
-         <a class="m_btn" target="_blank" href="<%= @gadget.gg_url %>">Check it out on <em><%= @gadget.gg_spare_01 %></em></a>
+
+         <% if @gadget.gg_option_03.present? %>
+          <a class="m_btn" target="_blank" href="<%= @gadget.gg_url %>">Check it out on <em><%= @gadget.gg_spare_01 %></em></a>
+         <% else %>
+          <p>$<%= @gadget.gg_aprice %></p>
+          <a class="m_btn" target="_blank" href="<%= @gadget.gg_url %>">Check it out on <em><%= @gadget.gg_spare_01 %></em></a>
+         <% end %>
+            
          <!-- <div class="option_btn">
            <a href="/gadgets?category=Tech">See More Tech</a>
          </div> -->
