--- a/app/views/gadgets/index.html.erb
+++ b/app/views/gadgets/index.html.erb
@@ -1,7 +1,7 @@
 <% content_for :title, "Categories Of Coolest Products" %>
 <div class="layout"><!--layout-->
 
-  <%= render 'shared/header' %>
+  <%= render 'shared/header_short' %>
     
   <!-- for play youtube video-->
   <%= render 'shared/play_video' %>
