--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -6,6 +6,14 @@
 <div class="category_wrap clearfix">
   <div class="wrap">
     <h2>Categories</h2>
+    
+    <!-- <div class="cateogry_box">
+      <a href="/blogs/gadget_test">
+        <img src="https://images.unsplash.com/photo-1468495244123-6c6c332eeece?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
+        <div class="centered">Test</div>
+      </a>
+    </div> -->
+
     <div class="cateogry_box">
       <a href="/gadgets?category=Gadgets">
         <img src="https://images.unsplash.com/photo-1468495244123-6c6c332eeece?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
