--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -49,6 +49,154 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="65" data-price="14.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LoZR6Z"><img src="https://m.media-amazon.com/images/I/71m9J7gTX8L._SR400,400_.jpg" alt="Wireless Car Charger" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>65% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LoZR6Z">Wireless Car Charger, Wonsidary Automatic Clamping Car Charger Mount 10W/7.5 W Fast Charging Qi Cell Phone Holder Compatible ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.00</span><span class="ori_price">$39.99</span></address>
+      <textarea readonly="readonly" class="code_area">65GKVUEY</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>65% off at $39.99</strong> with promo code: <strong class="m_codes">65GKVUEY</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 04, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2LoZR6Z">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="60" data-price="8.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Ln7YRA"><img src="https://m.media-amazon.com/images/I/61zC7bJESHL._SR400,400_.jpg" alt="Tablet Cases/iPad Mini 5 Case" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Ln7YRA">Tablet Cases/iPad Mini 5 Case 2019/iPad Mini 4 2015 Case with Pencil Holder 360 Rotating Kickstand Hand Shoulder Strap,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.00</span><span class="ori_price">$19.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">60RDIV6L</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>60% off at $19.99</strong> with promo code: <strong class="m_codes">60RDIV6L</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Oct 02, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Ln7YRA">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="60" data-price="6.40">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2HIvF5F"><img src="https://m.media-amazon.com/images/I/61l4o1f9AWL._SR400,400_.jpg" alt="Nose Hair Trimmer" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2HIvF5F">Nose Hair Trimmer for Men & Women,Electric Nose and Ear Hair Trimmer set </a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$6.40</span><span class="ori_price">$15.99</span></address>
+      <textarea readonly="readonly" class="code_area">60168MU6</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>60% off at $15.99</strong> with promo code: <strong class="m_codes">60168MU6</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 03, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2HIvF5F">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="30" data-price="69.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2HI84lU"><img src="https://m.media-amazon.com/images/I/41kkq40f9XL._SR400,400_.jpg" alt="Foot Massager" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2HI84lU">Foot Massager - Electric Plantar Deep Kneading Therapy with Heat and Air Compression Shiatsu Machine, Home Office Foot Spa ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$69.99</span><span class="ori_price">$99.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">30HZSZMN</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $99.99</strong> with promo code: <strong class="m_codes">30HZSZMN</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 03, 2019 at 03:00 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2HI84lU">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="25" data-price="16.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2UronbH"><img src="https://m.media-amazon.com/images/I/51F5f70chDL._SR400,400_.jpg" alt="ALOVECO Essential Oil Diffuser" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2UronbH">ALOVECO Essential Oil Diffuser with Remote, 300ml Aromatherapy Diffusers for Essential Oils Humidifiers with...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$16.49</span><span class="ori_price">$21.99</span></address>
+      <textarea readonly="readonly" class="code_area">25Y1YJJC</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>25% off at $21.99</strong> with promo code: <strong class="m_codes">25Y1YJJC</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 30, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2UronbH">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="30" data-price="10.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2UsW78H"><img src="https://m.media-amazon.com/images/I/61Yp8ZnAwEL._SR400,400_.jpg" alt="Sycees Plug-in LED Night" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2UsW78H">Sycees Plug-in LED Night Light with Dusk-to-Dawn Sensor for Bedroom, Bathroom, Kitchen, Hallway, Stairs, Daylight White, 6-Pack</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$10.49</span><span class="ori_price">$14.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">30DFA2XP</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $14.99</strong> with promo code: <strong class="m_codes">30DFA2XP</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 09, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2UsW78H">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="55" data-price="5.85">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Uq2fOZ"><img src="https://m.media-amazon.com/images/I/71in23gYgRL._SR400,400_.jpg" alt="Double Ss Hanging Travel Toiletry Bag" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>55% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Uq2fOZ">Double Ss Hanging Travel Toiletry Bag for Men and Women Waterproof Cosmetic Organizer for Make UP Dopp Kit Shower Bag with Sturdy Hook </a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$5.85</span><span class="ori_price">$12.99</span></address>
+      <textarea readonly="readonly" class="code_area">55DYTGSW</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>55% off at $12.99</strong> with promo code: <strong class="m_codes">55DYTGSW</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 08, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Uq2fOZ">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="40" data-price="17.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZPL8vj"><img src="https://m.media-amazon.com/images/I/71Axk4IftkL._SR400,400_.jpg" alt="mykit Fitness Tracker" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZPL8vj">mykit Fitness Tracker with Heart Rate Monitor, 1.3 Inches Color Screen IP67 Waterproof Smart Watch with Blood Pressure Monitor ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$17.99</span><span class="ori_price">$29.99</span>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      <textarea readonly="readonly" class="code_area">40ZFDFTJ</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $29.99</strong> with promo code: <strong class="m_codes">40ZFDFTJ</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 04, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2ZPL8vj">Use Code at Amazon</a></div>
+</div>
+ 
 <div class="card clearfix" data-score="35" data-price="10.39">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2PBIXr3"><img src="https://m.media-amazon.com/images/I/61azDUr4jqL._SR400,400_.jpg" alt="NUBWO U3 3.5mm Gaming Headset" /></a>
