new deals and friendly id for recommend

--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -401,7 +401,12 @@
 /* For Editors' Pick */
 /*.editor_mobile{display:none;}*/
 .header_short_sub_nav{margin-top:90px;}
-.editors_pick .editors_box{float:left;width:18%;margin:0 1% 5% 1%;height:400px;}
+.editors_pick .editors_box{float:left;width:18%;margin:0 1% 1% 1%;height:400px;}
+.editors_pick .editors_box .best_image{position:relative;}
+.editors_pick .editors_box .best_image .green{background:#87c442;}
+.editors_pick .editors_box .best_image .purple{background:red;}
+.editors_pick .editors_box .best_image .ex_sale{position:absolute;top:0;left:0;text-align:center;font-size:9px;padding:5px;color:#fff;line-height:1;border-radius:10px;}
+.editors_pick .editors_box .best_image .ex_sale span{display:block;}
 .editors_pick .editors_box img{width:100%;height:200px;object-fit:contain;padding:15px;}
 .editors_pick .editors_box .rating img{height:16px;padding:0;}
 .editors_pick .editors_box .rating p{text-align:center;font-size:13px;margin-top:-10px;color:#08f;}
